test_regress/t/t_static_task_args_bad.out
%Error: t/t_static_task_args_bad.v:12:19: It is illegal to use argument passing by reference for subroutines with a lifetime of static (IEEE 1800-2023 13.5.2)
                                        : ... note: In instance 't'
   12 |   task t1(ref int x);
      |                   ^
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: Exiting due to
